--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
         <li class="fork"><a href="{{site.baseurl}}/compsci">CompSci</a></li>
         <li class="fork"><a href="{{site.baseurl}}/blogs">Blogs</a></li>
         <li class="title"><a href="{{site.baseurl}}/help">Help</a></li>
+        <li class="title"><a href= "{{site.baseurl}}//2024-02-1-signup.html">Signup!</a></li>
+        <li class="title"><a href= "{{site.baseurl}}//2024-01-30-login.html">Login</a></li>
         <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
       </ul>
     </nav>
